Improve search (#23)
* Added some other points to search, added lake to POIs, did some renames.

* Make test a bit more complex for better coverage.

* Fix issue with adding highways without names.

* Update search to include what was discussed.